controlplane/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlh-controlplane
  namespace: dlh-test-fw
  labels:
    app.kubernetes.io/name: dlh-controlplane
spec:
  selector:
    app.kubernetes.io/name: dlh-controlplane
  ports:
    - name: http
      port: 80
      targetPort: http
